--- a/TimeTracker-ng4/package.json
+++ b/TimeTracker-ng4/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular-sortablejs": "^2.1.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
+    "sortablejs": "^1.6.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
